# crewai_sample

study_buddy___topic_breakdown_and_quiz_assistant_v1_crewai-project/: README.md  pyproject.toml
study_buddy___topic_breakdown_and_quiz_assistant_v1_crewai-project/src/study_buddy___topic_breakdown_and_quiz_assistant/: crew.py  main.py
study_buddy___topic_breakdown_and_quiz_assistant_v1_crewai-project/src/study_buddy___topic_breakdown_and_quiz_assistant/config/: agents.yaml  tasks.yaml
