[project]
name = "study_buddy___topic_breakdown_and_quiz_assistant"
version = "0.1.0"
description = "study_buddy___topic_breakdown_and_quiz_assistant using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.203.0,<1.0.0"
]

[project.scripts]
study_buddy___topic_breakdown_and_quiz_assistant = "study_buddy___topic_breakdown_and_quiz_assistant.main:run"
run_crew = "study_buddy___topic_breakdown_and_quiz_assistant.main:run"
train = "study_buddy___topic_breakdown_and_quiz_assistant.main:train"
replay = "study_buddy___topic_breakdown_and_quiz_assistant.main:replay"
test = "study_buddy___topic_breakdown_and_quiz_assistant.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
